istio/gateway-authorizationpolicy.yaml
# Allow all traffic to the istio-ingressgateway
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: istio-ingressgateway
  namespace: istio-system
spec:
  action: CUSTOM
  selector:
    # Same as the istio-ingressgateway Service selector
    matchLabels:
      app: istio-ingressgateway
      istio: ingressgateway
  provider:
    name: "oauth2-proxy"
  rules:
  - to:
    - operation:
        hosts:
        - "kubeflow.abs-cloud.nl"
        - "serving.abs-cloud.nl"
        #- "*.serving.abs-cloud.nl"
        # notPaths:
        # - "/oauth2*"
        # notHosts:
        # - "dex.abs-cloud.nl"
